# reusable_stuff

./: LICENSE  README.md
git/: git_set_email.sh
git/hooks/: pre-commit-bump-version
linux/: readme.md  service_descriptor.service
macos/: remove_all_ds_store.sh
python/: pyproject.toml
