[tool.poetry]
name = "project_name"
version = "0.1.0"
description = "Description"
authors = ["Raphael Michel <raph.mic@gmail.com>"]
license = "MIT"

packages = [
    { include= "*", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
typer = "^0.9.0"
rich = "^13.7.1"
pyyaml = "^6.0.1"

[tool.poetry.scripts]
tool_name = "package.cli:app"

[[tool.poetry.source]]
name = "default"
url = 'https://pypi.python.org/simple'
default = true

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
twine = "^4.0.2"
poetry = "^1.8.2"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
